- dropped deprecated usage of 'new URL(str)'